# tarefa-freertos-1-karenbeat

./: FreeRtosKernel  README.md  gitignore
FreeRTOSpico/: CMakeLists.txt
src/: main.c
